<resources>
    <string name="app_name">JLib</string>
    <string name="service_name">LoginNFCService</string>
    <string name="card_title">LoginCard</string>
    <string-array name="tab_title">
        <item>NFC</item>
        <item>QRCode</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="not_checkin">You are not check in, please go to check in or contact librarian.</string>
    <string name="no_internet_text">Không có kết nối với Server. Đảm bảo Wi-fi hoặc dữ liệu di động được bật và sau đó thử lại</string>
    <string name="turn_on_bluetooth">Vui lòng bật bluetooth trên điện thoại của bạn</string>
    <string name="turn_on_bluetooth_already">Bluetooth đã được bật</string>
    <string name="welcome">Chào mừng bạn tới thư viện</string>
    <string name="sign_out">Thoát tài khoản</string>
    <string name="borrowed_book">Sách đã mượn</string>
    <string name="borrowing_book">Sách đang mượn</string>
    <string name="profile">Tài khoản</string>
    <string name="home">Trang chủ</string>
    <string name="recent_borrow_book">Sách vừa mới mượn</string>
    <string name="login">Đăng Nhập</string>
    <string name="home_address">Địa chỉ nhà</string>
    <string name="policy_library">Nội quy</string>

    <string-array name="url">
        <item></item>
    </string-array>
</resources>
