<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_personal"
        android:checkableBehavior="single">
        <item android:id="@+id/barCodePage"
            android:title="@string/home"/>
        <item
            android:id="@+id/your_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/borrow_list"
            android:title="@string/borrowing_book" />
        <item
            android:id="@+id/borrowed_list"
            android:title="@string/borrowed_book"/>
    </group>
    <group
        android:id="@+id/menu_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out" />
    </group>
</menu>